--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,700' rel='stylesheet' type='text/css'>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 </head>
-<body>
+<body onload="onloadFuncion()">
     <div id="container">
         <h2 id="title-answer">Close Your Eyes And Think About Your Question</h2>
         <div id="quoteContainer">
